--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,19 +1,9 @@
-<header>
-  <title> New Attendance </title>
-</header>
-
-<h1>New Attendance</h1>
+<h1>New attendance</h1>
 
 <%= render "form", attendance: @attendance %>
 
 <br>
 
 <div>
-  <%= link_to attendances_path do %>
-    <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
-    onmouseover="this.style.transform='scale(1.1)';"
-    onmouseout="this.style.transform='scale(1)';">
-      <%= image_tag "back_arrow_icon.png", alt: "Back to Attendance Dashboard", style: "width: 100%; height: auto;" %>
-    </button>
-  <% end %>
+  <%= link_to "Back to attendances", attendances_path %>
 </div>
