--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Events</title>
+  <title>Admin Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
   <style>
@@ -13,44 +13,12 @@
       margin: 50px;
     }
 
-    h3 {
-      color: #333;
-      font-size: 5vw;
-    }
-
-    h2 {
-      color: #333;
-      margin-top: 1%;
-      left: 41.25%;
-      font-size: 2vw;
-    }
-
-    h1 {
-      margin-top: 1%;
-      font-size: 3vw;
-    }
-
-    .imsa-logo {
-      position: fixed;
-      top: 4%;
-      left: 3%;
-      width: 7.5%;
-    }
-
-    .profile-icon {
-      position: fixed;
-      top: 4%;
-      right: 3%; 
-      width: 7.5%; 
-      cursor: pointer;
-    }
-
     h2 {
       color: #333;
     }
 
     p {
-      color: #666;åå
+      color: #666;
     }
 
     a {
@@ -95,6 +63,21 @@
       color: #fff;
     }
 
+    .header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #007bff;
+      padding: 5px; 
+      color: #fff;
+    }
+    .miniheader{
+      margin-left: -60%; 
+    }
+    .miniheader1{
+      margin-left: -53%; 
+    }
+
     .content {
       margin-top: 60px; 
     }
@@ -102,9 +85,9 @@
     .navbar {
       background-color: #007bff;
       padding: 5px;
-      width: 55%;
+      width: 57%;
       margin: auto; 
-      margin-top: 5vh;
+      margin-top: 15vh; 
       display: flex;
       align-items: center; 
       justify-content: space-evenly;
@@ -115,16 +98,11 @@
       color: #fff;
     }
 
+
     .navbar .active a {
       background-color: #C0C0C0; 
       color: #007bff; 
       border-radius: 5px; 
-    }
-
-    .navbar-nav {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
     }
 
     .member-navbar {
@@ -132,18 +110,25 @@
     }
     @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
 
-    .miniheader{
-      margin-left: -60%; 
-    }
-
-    .miniheader1{
-      margin-left: -53%; 
+    .side-header {
+      transform: rotate(270deg);
+      position: fixed;
+      top: 75%; 
+      left: 13%; 
+      transform-origin: bottom left; 
+      letter-spacing: 0.8em; 
+      font-size: 120px; 
+      font-family: 'Mustopha'; 
     }
 
     .floating-button {
       position: fixed;
-      bottom: 10%;
-      right: 10%;
+      bottom: 40px;
+      right: 40px;
+    }
+
+    .finances {
+      margin-top: 30px;
     }
 
     .newFinance button{
@@ -151,91 +136,162 @@
       color: #333;
       border: 2px solid #ccc;
       border-radius: 20px;
-      font-size: 5vh;
+      font-size: 50px;
       cursor: pointer;
-      height: 10vh;
-      width: 5vw;
+      height: 75px;
+      width: 75px;
       text-align: center;
+      margin-right: 325px;
+      margin-bottom: 20px;
     }
 
     .newFinance button:hover{
       background: #ccc;
     }
 
+    .showFinance button{
+      background-color: #f9f9f9;
+      color: #333;
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .showFinance button:hover{
+      scale: 1.1;
+    }
+
+    .pending-finance-box {
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      max-width: 500px;
+      margin: auto;
+      background-color: #f9f9f9;
+      margin-bottom: 10px;
+    }
+
+    .completed-finance-box {
+      border: 2px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      max-width: 500px;
+      margin: auto;
+      background-color: #f9f9f9;
+      margin-bottom: 10px;
+    }
+
     .pretty-divider {
       border: none;
       height: 2px;
       background-color: #ccc;
-      width: 80%;
+      width: 30%;
     }
 
     .red-dot {
-      width: 1.75vw;
-      height: 3.5vh;
+      width: 22px;
+      height: 22px;
       background-color: red;
       border-radius: 100%;
       position: absolute;
-      top: 24.5%;
-      left: 73.5%;
+      top: 190px;
+      left: 1410px;
       z-index: 1000000;
       font-size: 1vw;
-      color: white;
     }
+
   </style>
 </head>
 <body>
 
   <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
     <% end %>
   <% end %>
 
-  <% if admin_signed_in? %>
-    <% current_member = Member.find_by(email: current_admin.email) %>
-    
-    <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-      <h1>Events</h1>
-      <div class="links">
-        <div class="admin-links">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<% if admin_signed_in? %>
+  <% current_member = Member.find_by(email: current_admin.email) %>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+  <% if current_member&.position == 'Admin' %>
+  <div class="links">
+  <div class="admin-links">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to 'Members', members_path, class: 'nav-link' %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
-                </li>
-                <li class="nav-item active">
-                  <%= link_to 'Events', events_path, class: 'nav-link' %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <% else %>
-      <div class="admin-info">
-        <h1>Events</h1>
-        <div class="links">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item" >
+              <li class="nav-item">
                 <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
               </li>
+              <li class="nav-item">
+                <%= link_to 'Members', members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to 'Events', events_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  <% elsif current_member&.position != 'President' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+    <h2>Officer Dashboard</h2>
+    <div class="links">
+      <div class="admin-links">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Members', members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to 'Events', events_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  <% else %>
+    <div class="admin-info">
+      <h2>Member Dashboard</h2>
+      <div class="links">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
+          <ul class="navbar-nav">
+            <li class="nav-item" >
+              <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+            </li>
 
               <li class="nav-item active">
                 <%= link_to 'Events', events_path, class: 'nav-link' %>
@@ -250,41 +306,42 @@
     <% end %>
   <% end %>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div id="events">
-          <% live_events = [] %>
-          <% upcoming_events = [] %>
-          <% past_events = [] %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="events">
+        <% live_events = [] %>
+        <% upcoming_events = [] %>
+        <% past_events = [] %>
 
-          <% @events.each do |event| %>
-            <% if event.end_time < Time.now %>
-              <% past_events << event %>
-            <% elsif event.start_time < Time.now %>
-              <% live_events << event %>
-            <% else %>
-              <% upcoming_events << event %>
-            <% end %>
+        <% @events.each do |event| %>
+          <% if event.end_time < Time.now %>
+            <% past_events << event %>
+          <% elsif event.start_time < Time.now %>
+            <% live_events << event %>
+          <% else %>
+            <% upcoming_events << event %>
           <% end %>
+        <% end %>
 
-          <h2 class = "miniheader">Live Events</h2>
-          <% live_events.each do |event| %>
-            <div class="row">
-              <div class="col-md-12">
-                <%= render event %>
-                <p>
-                  <%= link_to "Show this event", event %>
-                  <% if event.end_time >= Time.now %>
-                    <%= link_to "Attend", attend_event_path(event) %>
-                  <% end %>
-                  <% if event.attendanceVisible || (current_member&.position != 'Member' && current_member&.position != 'Pending') %>
-                    <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
-                  <% end %>
-                </p>
-              </div>
+        <h2 class = "miniheader">Live Events</h2>
+        <% live_events.each do |event| %>
+          <div class="row">
+            <div class="col-md-12">
+              <%= render event %>
+              <p>
+                <%= link_to "Show this event", event %>
+                <% if event.end_time >= Time.now %>
+                  <%= link_to "Attend", attend_event_path(event) %>
+                <% end %>
+                <% if event.attendanceVisible %>
+                  <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
+                <% end %>
+              </p>
+              <hr>
             </div>
-          <% end %>
+          </div>
+        <% end %>
 
           <hr class="pretty-divider">
 
@@ -303,73 +360,68 @@
                 </p>
               </div>
             </div>
-          <% end %>
-
-          <hr class="pretty-divider">
-          
-          <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-            <h2 class = "miniheader">Past Events</h2>
-            <% past_events.each do |event| %>
-              <div class="row">
-                <div class="col-md-12">
-                  <%= render event %>
-                  <p>
-                    <% if event.attendanceVisible || (current_member&.position != 'Member' && current_member&.position != 'Pending') %>
-                      <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
-                    <% end %>
-                  </p>
-                </div>
-              </div>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-
-  <div class="floating-button">
-    <div class = "newFinance">
-      <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
-        <%= link_to new_event_path do %>
-          <button type="button">+</button>
+          </div>
         <% end %>
-      <% end %>
+
+        <h2 class = "miniheader">Past Events</h2>
+        <% past_events.each do |event| %>
+          <div class="row">
+            <div class="col-md-12">
+              <%= render event %>
+              <p>
+                
+                <% if event.attendanceVisible %>
+                  <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
+                <% end %>
+              </p>
+              <hr>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 
-  <%= link_to root_path do %>
-    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
-  <% end %>
 
-  <% if current_member&.position != 'Pending' %>
-    <a href="<%= profile_path %>">
-      <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
-    </a>
-  <% end %>
+<div class="floating-button">
+  <div class = "newFinance">
+    <% if @current_member&.position != 'Member' %>
+      <%= link_to new_event_path do %>
+        <button type="button">+</button>
+      <% end %>
+    <% end %>
+  </div>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<%= link_to "Dashboard", root_path %>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      var adminLinks = document.querySelector('.links');
-      var userLinks = document.querySelector('.user-links');
-      var adminInfo = document.querySelector('.admin-info');
-      var toggleButtons = document.querySelectorAll('.toggle-links-button');
 
-      toggleButtons.forEach(function(button) {
-        button.addEventListener('click', function() {
-          console.log(adminInfo.style.display); 
-          adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
-          if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
-            adminInfo.style.display = 'block'; 
-          } else {
-            adminInfo.style.display = "none"; 
-          }
-        });
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var adminLinks = document.querySelector('.links');
+    var userLinks = document.querySelector('.user-links');
+    var adminInfo = document.querySelector('.admin-info');
+    var toggleButtons = document.querySelectorAll('.toggle-links-button');
+
+    toggleButtons.forEach(function(button) {
+      button.addEventListener('click', function() {
+        console.log(adminInfo.style.display); 
+        adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
+        if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
+          adminInfo.style.display = 'block'; 
+        } else {
+          adminInfo.style.display = "none"; 
+        }
       });
     });
-  </script>
+  });
+</script>
 
 </body>
 </html>
