--- a/app/views/events/peopleAttending.html.erb
+++ b/app/views/events/peopleAttending.html.erb
@@ -1,4 +1,7 @@
 <!-- app/views/events/peopleAttending.html.erb -->
+<header>
+  <title>Attendance</title>
+</header>
 
 <h1>People Attending <%= @event.title %></h1>
 
@@ -8,4 +11,4 @@
   <% end %>
 </ul>
 
-<%= link_to 'Back to Event', event_path(@event) %>
+<%= link_to 'Back to Events', events_path %>
