--- a/app/views/attendances/_attendance.html.erb
+++ b/app/views/attendances/_attendance.html.erb
@@ -1,11 +1,34 @@
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 50px;
+  }
+
+  h2 {
+    color: #333;
+  }
+
+  p {
+    color: #666;åå
+  }
+
+  a {
+    color: #007bff;
+    text-decoration: none;
+    margin: 5px;
+  }
+</style>
+  
 <div id="<%= dom_id attendance %>">
+  
   <p>
     <strong>Email:</strong>
     <%= attendance.email %>
   </p>
 
   <p>
-    <strong>Event name:</strong>
+    <strong>Event:</strong>
     <%= attendance.event_name %>
   </p>
 
