--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -1,3 +1,49 @@
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 50px;
+  }
+
+  h3 {
+    color: #333;
+    font-size: 5vw;
+  }
+
+  h2 {
+    color: #333;
+    margin-top: 1%;
+    left: 41.25%;
+    font-size: 2vw;
+  }
+
+  h1 {
+    margin-top: 1%;
+    font-size: 3vw;
+  }
+
+  p {
+    color: #666;åå
+  }
+
+  a {
+    color: #007bff;
+    text-decoration: none;
+    margin: 5px;
+  }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    display: inline;
+    margin-right: 10px;
+  }
+</style>
+  
 <%= form_with(model: attendance) do |form| %>
   <% if attendance.errors.any? %>
     <div style="color: red">
@@ -20,6 +66,8 @@
     <%= form.label :event_name, style: "display: block" %>
     <%= form.text_field :event_name %>
   </div>
+
+  <br>
 
   <div>
     <%= form.submit %>
