--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,294 +1,310 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 50px;
-      }
-      .imsa-logo {
-        position: fixed;
-        top: 25px;
-        left: 50px;
-        width: 100px;
-      }
-      .profile-icon {
-        position: fixed;
-        top: 25px;
-        right: 50px; 
-        width: 100px; 
-        cursor: pointer;
-      }
+<header>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
 
-      h2 {
-        color: #333;
-      }
+    h3 {
+      color: #333;
+      font-size: 5vw;
+    }
 
-      p {
-        color: #666;åå
-      }
+    h2 {
+      color: #333;
+      margin-top: 1%;
+      left: 41.25%;
+      font-size: 2vw;
+    }
 
-      a {
-        color: #007bff;
-        text-decoration: none;
-        margin: 5px;
-      }
+    h1 {
+      margin-top: 1%;
+      font-size: 3vw;
+    }
 
-      .admin-links,
-      .user-links {
-        display: block; 
-      }
+    .imsa-logo {
+      position: fixed;
+      top: 4%;
+      left: 3%;
+      width: 7.5%;
+    }
 
-      .user-links,
-      .admin-info {
-        display: block; 
-      }
+    .profile-icon {
+      position: fixed;
+      top: 4%;
+      right: 3%; 
+      width: 7.5%; 
+      cursor: pointer;
+    }
 
-      .toggle-links-button {
-        padding: 10px;
-        margin: 10px;
-        cursor: pointer;
-      }
+    h2 {
+      color: #333;
+    }
 
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
+    p {
+      color: #666;åå
+    }
 
-      li {
-        display: inline;
-        margin-right: 10px;
-      }
+    a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 5px;
+    }
 
-      nav {
-        background-color: #007bff;
-        padding: 5px; 
-      }
+    .admin-links,
+    .user-links {
+      display: block; 
+    }
 
-      nav a {
-        color: #fff;
-      }
+    .user-links,
+    .admin-info {
+      display: block; 
+    }
 
-      .content {
-        margin-top: 60px; 
-      }
+    .toggle-links-button {
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
 
-      .navbar {
-        background-color: #007bff;
-        padding: 5px;
-        width: 55%;
-        margin: auto; 
-        margin-top: 5vh;
-        display: flex;
-        align-items: center; 
-        justify-content: space-evenly;
-        z-index: 1000;
-      }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
 
-      .navbar a {
-        color: #fff;
-      }
+    li {
+      display: inline;
+      margin-right: 10px;
+    }
 
-      .navbar .active a {
-        background-color: #C0C0C0; 
-        color: #007bff; 
-        border-radius: 5px; 
-      }
+    nav {
+      background-color: #007bff;
+      padding: 5px; 
+    }
 
-      .navbar-nav {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-      }
+    nav a {
+      color: #fff;
+    }
 
-      .member-navbar {
-        width: 30%;
-      }
-      @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+    .content {
+      margin-top: 60px; 
+    }
 
+    .navbar {
+      background-color: #007bff;
+      padding: 5px;
+      width: 55%;
+      margin: auto; 
+      margin-top: 5vh;
+      display: flex;
+      align-items: center; 
+      justify-content: space-evenly;
+      z-index: 1000;
+    }
 
-      .side-header {
-        transform: rotate(270deg);
-        position: fixed;
-        top: 75%; 
-        left: 11%; 
-        transform-origin: bottom left; 
-        letter-spacing: 0.8em; 
-        font-size: 100px; 
-        font-family: 'Mustopha'; 
-      }
+    .navbar a {
+      color: #fff;
+    }
 
-      .red-dot {
-      width: 22px;
-      height: 22px;
+    .navbar .active a {
+      background-color: #C0C0C0; 
+      color: #007bff; 
+      border-radius: 5px; 
+    }
+
+    .navbar-nav {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .member-navbar {
+      width: 30%;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
+
+    .red-dot {
+      width: 1.75vw;
+      height: 3.5vh;
       background-color: red;
       border-radius: 100%;
       position: absolute;
-      top: 160px;
-      left: 1425px;
+      top: 24.5%;
+      left: 73.5%;
       z-index: 1000000;
       font-size: 1vw;
+      color: white;
     }
+  </style>
+</header>
 
-    </style>
-  </head>
-
-  <body>
-  <% if current_member&.position != 'Member' %>
+<body>
+  <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
     <% if Finance.where(status: 0).count > 0 %>
-        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+        <div class="red-dot"><%= Finance.where(status: 0).count %></div>
     <% end %>
   <% end %>
-    <% if admin_signed_in? %>
-      <% current_member = Member.find_by(email: current_admin.email) %>
 
-      <% if current_member&.position == 'President'%>
-        <h2>Admin Dashboard</h2>
-        <div class="links">
-          <div class="admin-links">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Members', members_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Events', events_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      <% elsif current_member&.position == 'Officer' || current_member&.position == 'Finance Officer' %>
-        <h2>Officer Dashboard</h2>
-        <div class="links">
-          <div class="admin-links">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-                  </li>
+  <% if admin_signed_in? %>
+    <% current_member = Member.find_by(email: current_admin.email) %>
 
-                  <li class="nav-item">
-                    <%= link_to 'Members', members_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Officer Members', officer_index_members_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Events', events_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </div>
-        </div>
-      <% elsif current_member&.position == 'Pending' %>
-        <h2>Pending Member Dashboard</h2>
-          <h2>Your membership is pending...</h2>
-          <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
-      <% else %>
-        <div class="admin-info">
-          <h2>Member Dashboard</h2>
-          <div class="links">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
+    <% if current_member&.position == 'President'%>
+      <h1>President Dashboard</h1>
+      <div class="links">
+        <div class="admin-links">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
                 </li>
+
                 <li class="nav-item">
                   <%= link_to 'Members', members_path, class: 'nav-link' %>
                 </li>
+
+                <li class="nav-item">
+                  <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+                </li>
+
                 <li class="nav-item">
                   <%= link_to 'Events', events_path, class: 'nav-link' %>
                 </li>
+
                 <li class="nav-item">
-                  <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
+                  <%= link_to 'Finances', finances_path, class: 'nav-link' %>
                 </li>
               </ul>
-            </nav>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+    <% elsif current_member&.position != 'President' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+      <h1>Officer Dashboard</h1>
+      <div class="links">
+        <div class="admin-links">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                  <%= link_to 'Members', members_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                  <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                  <%= link_to 'Events', events_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                  <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+    <% elsif current_member&.position == 'Pending' %>
+      <h1>Pending Member Dashboard</h1>
+      <h2>Your membership is pending...</h2>
+      <h2>You won't be approved for an account unless you're a paid member of TAMU IMSA.</h2>
+
+    <% else %>
+      <div class="admin-info">
+        <h1>Member Dashboard</h1>
+        <div class="links">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to 'Events', events_path, class: 'nav-link' %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to 'Leaderboard', members_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>  
+    <% end %>
+
+    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
+    
+    <% if current_member&.position != 'Pending' %>
+      <a href="<%= profile_path %>">
+        <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
+      </a>
+
+      <div class="container my-5 pt-5">
+        <div class="row justify-content-center">
+          <div class="col-md-5 mb-3">
+            <%= link_to 'https://groupme.com/join_group/71582140/ZuYlurIs', target: "_blank" do %>
+              <%= image_tag 'groupme_logo.png', alt: 'First Image', class: 'img-fluid rounded', style: 'width: 70%; margin-top: -15%;' %>
+            <% end %>
           </div>
-        </div>  
-      <% end %>
-      <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
-      <% if current_member&.position != 'Pending' %>
-        <a href="<%= profile_path %>">
-          <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
-        </a>
-        <div class="container my-5 pt-5">
-          <div class="row justify-content-center">
-            <div class="col-md-5 mb-3">
-              <%= link_to 'https://www.groupme.com/', target: "_blank" do %>
-                <%= image_tag 'groupme_logo.png', alt: 'First Image', class: 'img-fluid rounded', style: 'margin-top: -15%;' %>
-              <% end %>
-            </div>
-            <div class="col-md-5 mb-3">
-              <%= link_to 'https://www.instagram.com/', target: "_blank" do %>
-                <%= image_tag 'instagram_logo.png', alt: 'Second Image', class: 'img-fluid rounded', style: 'width:80%; margin-top: -15%;' %>
-              <% end %>
-            </div>
+
+          <div class="col-md-5 mb-3">
+            <%= link_to 'https://instagram.com/tamu.imsa?igshid=MzRlODBiNWFlZA==', target: "_blank" do %>
+              <%= image_tag 'instagram_logo.png', alt: 'Second Image', class: 'img-fluid rounded', style: 'width: 70%; margin-top: -15%;' %>
+            <% end %>
           </div>
         </div>
-      <% end %>
+      </div>
     <% end %>
-    <h1 class="side-header">IMSA</h1>
+  <% end %>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        var adminLinks = document.querySelector('.links');
-        var userLinks = document.querySelector('.user-links');
-        var adminInfo = document.querySelector('.admin-info');
-        var toggleButtons = document.querySelectorAll('.toggle-links-button');
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var adminLinks = document.querySelector('.links');
+      var userLinks = document.querySelector('.user-links');
+      var adminInfo = document.querySelector('.admin-info');
+      var toggleButtons = document.querySelectorAll('.toggle-links-button');
 
-        toggleButtons.forEach(function(button) {
-          button.addEventListener('click', function() {
-            console.log(adminInfo.style.display); 
-            adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
-            if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
-              adminInfo.style.display = 'block'; 
-            } else {
-              adminInfo.style.display = "none"; 
-            }
-          });
+      toggleButtons.forEach(function(button) {
+        button.addEventListener('click', function() {
+          console.log(adminInfo.style.display); 
+          adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
+          if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
+            adminInfo.style.display = 'block'; 
+          } else {
+            adminInfo.style.display = "none"; 
+          }
         });
-      </script>
-    </script>
-  </body>
+      });
+    });
+  </script>
+</body>
 </html>
