--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -120,7 +120,7 @@
           <p class="card-text">
             <strong>Score:</strong> <%= @event.score %>
           </p>
-          <% if current_member&.position != 'Member' %>
+          <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
             <p class="card-text">
               <strong>Password:</strong> <%= @event.password %>
             </p>
@@ -139,6 +139,8 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
     <div class="col-md-4">
       <div class="card p-3 actions-card">
         <h5 class="card-title">Actions</h5>
@@ -153,27 +155,41 @@
     </div>
   </div>
 
-<!-- Confirmation Popup -->
-<div id="deleteConfirmationPopup" class="delete-confirmation-popup" style="display: none;">
-  <p id="deleteConfirmationMessage">Are you sure you want to delete <span id="eventName"></span>?</p>
-  <button id="confirmDeleteBtn" class="confirm-delete-btn">Delete</button>
-  <button onclick="cancelDelete()" class="cancel-delete-btn">Cancel</button>
-</div>
+  <!-- Confirmation Popup -->
+  <div id="deleteConfirmationPopup" class="delete-confirmation-popup" style="display: none;">
+    <p id="deleteConfirmationMessage">Are you sure you want to delete this event?</p>
+    <button id="confirmDeleteBtn" class="confirm-delete-btn">Delete</button>
+    <button onclick="cancelDelete()" class="cancel-delete-btn">Cancel</button>
+  </div>
+  
 
-<script>
-function confirmEventDelete(eventName) {
-  document.getElementById('eventName').textContent = eventName;
-  document.getElementById('deleteConfirmationPopup').style.display = 'block';
-}
+  <!-- Include Bootstrap JS files -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-document.addEventListener("DOMContentLoaded", function() {
-  var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
-  var destroyForm = document.querySelector('.destroy-event-form');
+  <script>
+    function confirmEventDelete() {
+      document.getElementById('deleteConfirmationPopup').style.display = 'block';
+    }
 
-  confirmDeleteBtn.addEventListener('click', function() {
-    destroyForm.submit();
-  });
-});
+    document.addEventListener("DOMContentLoaded", function() {
+      var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+      var destroyForm = document.querySelector('.event-delete-form');
+
+      confirmDeleteBtn.addEventListener('click', function() {
+        try {
+          if (destroyForm) {
+            console.log(destroyForm);
+            destroyForm.submit();
+          } else {
+            console.error('Delete form not found');
+          }
+        } catch (error) {
+          console.error('Error submitting delete form:', error);
+        }
+      });
+    });
 
     function cancelDelete() {
       document.getElementById('deleteConfirmationPopup').style.display = 'none';
