--- a/app/views/members/edit_phone_number.html.erb
+++ b/app/views/members/edit_phone_number.html.erb
@@ -1,4 +1,17 @@
 <%= form_for @member, url: update_phone_number_member_path(@member), method: :patch do |f| %>
+
+  <% if @member.errors.any? %>
+    <div style="color: red">
+      <h2><%= pluralize(@member.errors.count, "error") %> prohibited this member from being saved:</h2>
+
+      <ul>
+        <% @member.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :phone_number %>
   <%= f.text_field :phone_number %>
   <%= f.submit 'Update Phone Number' %>
